force-app/main/default/objects/Fundraising_Event__c/Fundraising_Event__c.object-meta.xml
<CustomObject>
    <description>Annual SFTS fundraising events (Cowboy Ball, Steak 'n Bake 'n, Chili Cookoff, Purse Bingo, Hancock County Community Night, etc.). Tracks revenue, expenses, attendance, status. Donations received at an event link via Donation__c.Source_Event__c (future). Avoids name collision with the standard Salesforce Event (calendar) object.</description>
    <label>Fundraising Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fundraising Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>