force-app/main/default/objects/Fundraising_Event__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <description>Number of attendees. Useful for ROI per attendee and year-over-year comparisons.</description>
    <label>Attendance</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>