force-app/main/default/objects/Fundraising_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>The date the event is or was held.</description>
    <label>Event Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>