force-app/main/default/objects/Fundraising_Event__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <description>Total cost to run the event (venue, food, marketing, prizes, etc.).</description>
    <label>Expenses</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>