force-app/main/default/objects/Fundraising_Event__c/fields/Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Revenue__c</fullName>
    <description>Total revenue raised at the event, including ticket sales, sponsorships, auctions, and individual donations made at the event.</description>
    <label>Gross Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>