force-app/main/default/objects/Fundraising_Event__c/fields/Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue__c</fullName>
    <description>Gross_Revenue - Expenses, automatically calculated. The actual fundraising "win" for the event.</description>
    <formula>NULLVALUE(Gross_Revenue__c, 0) - NULLVALUE(Expenses__c, 0)</formula>
    <label>Net Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>