force-app/main/default/objects/Fundraising_Event__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Lessons learned, vendor recommendations, attendance patterns, anything to remember next year.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>