force-app/main/default/objects/Fundraising_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Event lifecycle status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Planning</fullName><default>true</default><label>Planning</label></value>
            <value><fullName>Active / Promoting</fullName><default>false</default><label>Active / Promoting</label></value>
            <value><fullName>Held</fullName><default>false</default><label>Held</label></value>
            <value><fullName>Closed Out</fullName><default>false</default><label>Closed Out (Books Final)</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>