force-app/main/default/objects/Fundraising_Event__c/listViews/Past_Events_This_Year.listView-meta.xml
<ListView>
    <fullName>Past_Events_This_Year</fullName>
    <columns>NAME</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Gross_Revenue__c</columns>
    <columns>Expenses__c</columns>
    <columns>Net_Revenue__c</columns>
    <columns>Attendance__c</columns>
    <booleanFilter>1 AND 2</booleanFilter>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Event_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Past Events (This Year)</label>
</ListView>