force-app/main/default/objects/Fundraising_Event__c/listViews/Upcoming_Events.listView-meta.xml
<ListView>
    <fullName>Upcoming_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Gross_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Events</label>
</ListView>